--- a/Test.App/Views/Client/AddClientDialog.xaml
+++ b/Test.App/Views/Client/AddClientDialog.xaml
@@ -1,5 +1,5 @@
 <ContentDialog
-    x:Class="Test.App.Views.ClientViews.AddClientDialog"
+    x:Class="Test.App.Views.Client.AddClientDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
