--- a/Test.App/Views/Client/ClientPage.xaml
+++ b/Test.App/Views/Client/ClientPage.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <Page
-    x:Class="Test.App.Views.ClientViews.ClientPage"
+    x:Class="Test.App.Views.Client.ClientPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ctWinUI="using:CommunityToolkit.WinUI.UI.Controls"
