--- a/Test.App/Views/Client/ClientPage.xaml
+++ b/Test.App/Views/Client/ClientPage.xaml
@@ -5,7 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ctWinUI="using:CommunityToolkit.WinUI.UI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="using:Test.App.Views.ClientViews"
+    xmlns:local="using:Test.App.Views.Client"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="using:Test.Models"
     xmlns:viewModels="using:Test.App.ViewModels"
