--- a/Test.App/Views/TestView/TestPage.xaml
+++ b/Test.App/Views/TestView/TestPage.xaml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <Page
-    x:Class="Test.App.Views.Client.ClientPage"
+    x:Class="Test.App.Views.TestView.TestPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ctWinUI="using:CommunityToolkit.WinUI.UI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="using:Test.App.Views.Client"
+    xmlns:local="using:Test.App.Views.TestView"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="using:Test.Models"
     xmlns:viewModels="using:Test.App.ViewModels"
     x:Name="ThisPage"
-    d:DataContext="{d:DesignInstance Type=models:Client}"
+    d:DataContext="{d:DesignInstance Type=models:TestModel}"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-    NavigationCacheMode="Required"
     mc:Ignorable="d">
 
     <Grid Margin="40,40,20,80" Loaded="Grid_Loaded">
@@ -42,13 +41,13 @@
             FontSize="30" />
 
         <ctWinUI:DataGrid
-            x:Name="clientsTable"
+            x:Name="testsTable"
             Grid.Row="1"
             Grid.Column="0"
             AutoGenerateColumns="False"
             CanUserSortColumns="True"
             IsReadOnly="True"
-            ItemsSource="{x:Bind ViewModel.Clients}"
+            ItemsSource="{x:Bind ViewModel.Tests}"
             SelectionMode="Single">
             <ctWinUI:DataGrid.Columns>
                 <ctWinUI:DataGridTextColumn
